--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+atomicwrites==1.3.0
+attrs==19.3.0
 autopep8==1.4.4
 cachetools==3.1.1
 certifi==2019.9.11
@@ -8,13 +10,22 @@ google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.0
 httplib2==0.14.0
 idna==2.8
+importlib-metadata==0.23
+more-itertools==7.2.0
 oauthlib==3.1.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.6
 pycodestyle==2.5.0
+pyparsing==2.4.2
+pytest==5.2.1
 requests==2.22.0
 requests-oauthlib==1.2.0
 rsa==4.0
 six==1.12.0
 uritemplate==3.0.0
 urllib3==1.25.6
+wcwidth==0.1.7
+zipp==0.6.0
