--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 atomicwrites==1.4.0
 attrs==20.2.0
 autopep8==1.5.4
+bleach==3.2.1
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+colorama==0.4.4
+docutils==0.16
 google-api-core==1.22.4
 google-api-python-client==1.12.3
 google-auth==1.22.1
@@ -14,24 +17,33 @@ httplib2==0.18.1
 idna==2.10
 importlib-metadata==2.0.0
 iniconfig==1.1.1
+keyring==21.4.0
 more-itertools==8.5.0
 oauthlib==3.1.0
 packaging==20.4
+pkginfo==1.5.0.1
 pluggy==0.13.1
 protobuf==3.13.0
 py==1.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
+Pygments==2.7.1
 pyparsing==2.4.7
 pytest==6.1.1
 pytz==2020.1
+readme-renderer==27.0
 requests==2.24.0
 requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
 rsa==4.6
 six==1.15.0
 toml==0.10.1
+tqdm==4.50.2
+twine==3.2.0
 uritemplate==3.0.1
 urllib3==1.25.10
 wcwidth==0.2.5
+webencodings==0.5.1
 zipp==3.3.1
